<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_send_sms"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SendSMS"
    tools:deviceIds="wear">


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="yes"
        android:ems="10"
        android:hint="@string/enter_recipient_number"
        android:inputType="phone"
        android:text="@string/testMobileNumber" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_your_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/genie_command_time" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button_text" />
</LinearLayout>