<resources>
    <string name="app_name">Genie - My Assistant</string>
    <string name="title_activity_identity_messaging">Send Message</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="ok">OK</string>
    <string name="enter_recipient_number">Enter recipient number</string>
    <string name="testMobileNumber">8124550344</string>
    <string name="genie_command_time">Genie send time</string>
    <string name="hint_enter_your_message">Enter Your message</string>
    <string name="send_button_text">Send</string>
    <string name="send_message">Send Message</string>
    <string name="check_contact">Check Contact</string>
    <string name="smsLBG">Forward LBG SMS</string>
    <string name="get_contact_display_name">GET Contact Display name</string>
    <string name="contact_display_name">Contact Display Name</string>
    <string name="number_dk">8124550344</string>
    <string name="number_rajiv">9718597715</string>
    <string name="number_asha_ltc">8861833410</string>
    <string name="number_dilkush">8210112699</string>
    <string name="number_navaneethan">9789593101</string>
    <string name="number_asha_yella">9342449680</string>
    <string name="number_neha_shah">7984051040</string>
    <string name="number_chanrika">9494652493</string>

</resources>